classDiagram
    direction LR
    
    %% --- Color Definitions ---
    %% 메인 (주황)
    classDef main fill:#ffe0b2,stroke:#f57c00,stroke-width:2px,color:#000
    %% 시스템 (파랑)
    classDef sys fill:#b3e5fc,stroke:#0288d1,stroke-width:2px,color:#000
    %% 인터페이스 (보라)
    classDef io fill:#e1bee7,stroke:#7b1fa2,stroke-width:2px,color:#000
    %% 데이터 (초록)
    classDef data fill:#c8e6c9,stroke:#388e3c,stroke-width:2px,color:#000

    %% --- Apply Styles ---
    class Game:::main
    class DialogueManager:::sys
    class SaveSystem:::sys
    class TUI:::io
    class LLMClient:::io
    class Character:::data
    class Event:::data
    class DialogueContext:::data

    %% --- Class Definitions ---

    class Game {
        -Config& config_
        -TUI& ui_
        -DialogueManager& dialogueManager_
        -LLMClient& llmClient_
        -SaveSystem& saveSystem_
        -vector~Character~ characters_
        -vector~Event~ events_
        +Run()
        +ProcessTurn(string input)
        +CheckAndTriggerEvents()
    }

    class DialogueManager {
        -DialogueContext context_
        +BuildFullPrompt(Character*, string, string) json
        +ScoreAffectionDelta(string, string) int
        +PrintReply(LLMClient& json) string
    }

    class SaveSystem {
        -string directory_
        -string currentSlot_
        +SaveNew(Character&, DialogueContext&) string
        +LoadFromFile(string) bool
    }

    class TUI {
        +ShowMainMenu() MenuOption
        +PrintChunk(string) void
        +ShowChatScreen(string) void
    }

    class LLMClient {
        -string model_
        -LLMProvider provider_
        +SendMessage(json messages) string
    }

    class Character {
        -string name_
        -int affection_
        -int relationshipStage_
        -map~string, bool~ flags_
        +AddAffection(int delta)
        +AdvanceRelationshipStage()
        +SetFlag(string, bool)
    }

    class Event {
        +string id
        +string condition
        +string dialogue
    }

    class DialogueContext {
        -vector~DialogueTurn~ history_
        +AddTurn(string, string)
        +History()
    }

    %% --- Relationships ---
    
    Game --> TUI : 입출력_제어
    Game --> DialogueManager : 대화_로직_위임
    Game --> LLMClient : API_호출
    Game --> SaveSystem : 저장_관리
    
    Game "1" *-- "many" Character : 캐릭터_관리
    Game "1" *-- "many" Event : 이벤트_관리
    
    DialogueManager --* DialogueContext : 컨텍스트_소유
    DialogueManager ..> LLMClient : 메시지_전송
    DialogueManager ..> Character : 상태_읽기
    
    LLMClient ..> DialogueManager : 응답_반환(string)
